# python-project-lvl1

./: Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: cli.py
brain_games/lib/: answer_examenation.py  calculations.py  games.py  greeting.py
brain_games/lib/games/: __init__.py  game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py  games.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
