[tool.poetry]
name = "hexlet-code"
version = "0.1.3"
description = ""
authors = ["Ivan Cheklin <ivan.cheklin.1985@gmail.com>"]
readme = "README.md"
packages = [{include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
